add shop exception